# e

./: .gitignore  Cargo.toml
assets/icons/: icon.icns
src/: app.rs  config.rs  database.rs  lib.rs  main.rs  ui.rs  utils.rs
