[package]
name = "e"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
duckdb = {version = "1.4.3", features = ["bundled", "chrono", "json"]}
eframe = "0.33"
env_logger = "0.11"
log = "0.4"
reqwest = { version = "0.13", features = ["json"] }
rfd = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49", features = ["full"] }

